# habit_power_app

./: .dockerignore  .gitignore  README.md  dockerfile  install.md  main.py  pyproject.toml
api/: api.py
app/: main.py
app/api/controllers/: habit_controller.py
app/domain/entities/: habit.py
app/repository/: habit_repository.py
app/sql/: habits.sql  insights.sql  rewards.sql  tracking.sql
database/: database.sqlite3  habits.sql  users.sql
domain/entities/: habit.py
domain/use_cases/: habit_use_case.py
